data and func notebook outline

--- a/exercises/data_structure2.ipynb
+++ b/exercises/data_structure2.ipynb
@@ -5,11 +5,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Storage (Part 1)\n",
+    "# Data Storage (Part 2)\n",
     "\n",
-    "<a href='data_structure2.ipynb'>Data Storage (Part 2)</a>\n",
-    "\n",
-    "In python the four basic primitive data types are strings, integers, floats and booleans. There are several built-in data structures that store these four primitive data such as lists, dictionaries, sets and tuples. For our purposes, understanding and utilising these aformentioned concepts will suffice. However, it is good to know that there are other very useful data structures in computer science such as linked lists, hash maps, stacks, trees, queues and so forth. "
+    "<a href='data_structure.ipynb'>Data Storage (Part1)</a>\n"
    ]
   },
   {
@@ -17,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Primitive Data Types"
+    "## Data Types"
    ]
   },
   {
@@ -25,22 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Strings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Integer and Float"
+    "### Lists"
    ]
   },
   {
@@ -48,7 +31,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Booleans"
+    "### Dictionaries"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tuples and Sets"
    ]
   },
   {
@@ -64,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reflection "
+    "## Reflection"
    ]
   }
  ],
