--- a/exercises/functions.ipynb
+++ b/exercises/functions.ipynb
@@ -1,12 +1,30 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import numpy as np"
+    "# Modules and Functions"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modules\n",
+    "https://docs.python.org/3/library/modules.html\n",
+    "\n",
+    "<a ref = 'https://docs.python.org/3/reference/simple_stmts.html#import'>import statement</a>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Functions"
    ]
   },
   {
