completed the list notebook

--- a/exercises/data_structures/data_structure2.ipynb
+++ b/exercises/data_structures/data_structure2.ipynb
@@ -5,9 +5,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Storage (Part 2)\n",
+    "# Data Storage (Part 2): List\n",
     "\n",
-    "<a href='data_structure.ipynb'>Data Storage (Part1)</a>\n"
+    "<p>Created by Venus Lee </p>\n"
    ]
   },
   {
@@ -15,7 +15,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Types"
+    "## Data Structures\n",
+    "\n",
+    "<p>\n",
+    "Hi, welcome to this exercise. Today, you are going to learn about four fundamental in-built data structures in Python. They are \n",
+    "<ul>\n",
+    "    <li>Lists</li>\n",
+    "    <li>Dictionaries</li>\n",
+    "    <li>Tuples</li>\n",
+    "    <li>Sets</li>\n",
+    "</ul>\n",
+    "</p>\n",
+    "<div>\n",
+    "    <img src=\".\\figures\\data_structure.jpg\" style=\"width:600px;height:400px;\">\n",
+    "</div>\n",
+    "<p>\n",
+    "Visit <a href='data_structure.ipynb'>Data Storage (Part1)</a> notebook if you need a quick recap on the four basic in-built data types in Python. \n",
+    "</p>\n",
+    "<p>\n"
    ]
   },
   {
@@ -23,8 +40,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Lists"
+    "<br><b>Task 1</b></br>\n",
+    "Read this <a href = \"https://www.dataquest.io/blog/data-structures-in-python/#:~:text=Python%20has%20four%20main%20data,heterogeneous%20collection%20of%20related%20objects.\">short article </a> to get a rough idea of what lists, dictionaries, tuples and sets are before you learn how to use them. Make sure you understand:\n",
+    "<ul>\n",
+    "    <li>Mutability</li>\n",
+    "    <li>Pros and cons of each data structure</li>\n",
+    "</ul>"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br><b>Task 2</b></br>\n",
+    "<p>\n",
+    "Please go to the <a href='list.ipynb'>List</a> notebook to do the exercises\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
@@ -60,8 +114,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.2"
   },
   "orig_nbformat": 4
  },
