final update on pi day

--- a/exercises/data_structures/data_structure2.ipynb
+++ b/exercises/data_structures/data_structure2.ipynb
@@ -55,37 +55,38 @@
    "source": [
     "<br><b>Task 2</b></br>\n",
     "<p>\n",
-    "Please go to the <a href='list.ipynb'>List</a> notebook to do the exercises\n",
+    "Please go to the <a href='list.ipynb'>list</a> notebook to do the exercises\n",
     "</p>"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dictionaries"
+    "<br><b>Task 3</b></br>\n",
+    "<p>\n",
+    "Please go to the <a href='dictionary.ipynb'>dictionary</a> notebook to do the exercises\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br><b>Task 4</b></br>\n",
+    "<p>\n",
+    "Please go to the <a href='tuple_and_set.ipynb'>tuple and set</a> notebook to do the exercises\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br><b>Task 5</b></br>\n",
+    "<p>\n",
+    "Please go to the <a href='homework_data_structure.ipynb'>homework</a> notebook to do the application-based exercises\n",
+    "</p>"
    ]
   },
   {
@@ -93,23 +94,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tuples and Sets"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Application-based Assignment"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Reflection"
+    "<br><b>Task 6</b></br>\n",
+    "<p>\n",
+    "<b>Reflection</b><br>\n",
+    "Think about what you have learnt in the data structure exercises and write a short summary to consolidate your understanding of the topic. Post a question on the discussion forum if you feel like it too!\n",
+    "</p>"
    ]
   }
  ],
