restructure the data_structure folder

--- a/exercises/data_structures/data_types.ipynb
+++ b/exercises/data_structures/data_types.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "<a href='data_structure2.ipynb'>Data Storage (Part 2)</a>\n",
     "\n",
-    "In python the four basic primitive data types are strings, integers, floats and booleans. There are several built-in data structures that store these four primitive data such as lists, dictionaries, sets and tuples. For our purposes, understanding and utilising these aformentioned concepts will suffice. However, it is good to know that there are other very useful data structures in computer science such as linked lists, hash maps, stacks, trees, queues and so forth. "
+    "In python the four basic primitive data types are strings, integers, floats and booleans. There are several built-in data structures that store these four primitive data such as lists, dictionaries, sets and tuples. (see <a href='data_structure2.ipynb'>Data Storage (Part 2)</a>) For our purposes, understanding and utilising these aformentioned concepts will suffice. However, it is good to know that there are other very useful data structures in computer science such as linked lists, hash maps, stacks, trees, queues and so forth. "
    ]
   },
   {
@@ -17,7 +17,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Primitive Data Types"
+    "## Primitive Data Types\n",
+    "<p> Here in this notebook, we are going to learn four things:\n",
+    "    <ul>\n",
+    "        <li>Strings</li>\n",
+    "        <li>Integers</li>\n",
+    "        <li>Floats</li>\n",
+    "        <li>Booleans</li>\n",
+    "    </ul>\n",
+    "</p>\n"
    ]
   },
   {
