--- a/exercises/data_structures/list.ipynb
+++ b/exercises/data_structures/list.ipynb
@@ -68,7 +68,7 @@
     "After running the cell above, you should have: <br> \n",
     "mylist = ['haha', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9] <br>\n",
     "<br>\n",
-    "Make sure you understand how mylist is created, i.e. how the append() method and for loop worked. Then, let's do some practices on slicing. Try to...\n",
+    "Make sure you understand how mylist is created, i.e. how the append() method and the for loop worked. Then, let's do some practices on slicing. Try to...\n",
     "<ul>\n",
     "    <li>get output: [3,4,5,6,7]</li>\n",
     "    <li>get output: 7, but using something like mylist[-1]</li>\n",
