--- a/exercises/data_structures/main.ipynb
+++ b/exercises/data_structures/main.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Storage (Part 2): List\n",
+    "# Data types and structures\n",
     "\n",
     "<p>Created by Venus Lee </p>\n"
    ]
@@ -29,10 +29,13 @@
     "<div>\n",
     "    <img src=\".\\figures\\data_structure.jpg\" style=\"width:600px;height:400px;\">\n",
     "</div>\n",
+    "\n",
     "<p>\n",
-    "Visit <a href='data_structure.ipynb'>Data Storage (Part1)</a> notebook if you need a quick recap on the four basic in-built data types in Python. \n",
-    "</p>\n",
-    "<p>\n"
+    "Here is the <a href='https://docs.python.org/3/tutorial/datastructures.html#'>complete Python documentation on data structures</a>. All the things we are teaching you here are derived from this 'Bible' of Python programming.\n",
+    "<br>\n",
+    "<br>\n",
+    "You can treat documentation a bit like how you treat an A-level subject specification, essentially a document containing all you need to know to succeed in learning Python. They come in different languages (English, Chinese, Japanese, Spanish, French and so forth...) so developers all around the globe can understand the information with ease.\n",
+    "</p>\n"
    ]
   },
   {
@@ -41,6 +44,17 @@
    "metadata": {},
    "source": [
     "<br><b>Task 1</b></br>\n",
+    "<p>\n",
+    "Go through the <a href='data_type.ipynb'>data type</a> notebook if you need a quick recap on the four basic in-built data types (strings, integers, floats and booleans) in Python. \n",
+    "</p>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br><b>Task 2</b></br>\n",
     "Read this <a href = \"https://www.dataquest.io/blog/data-structures-in-python/#:~:text=Python%20has%20four%20main%20data,heterogeneous%20collection%20of%20related%20objects.\">short article </a> to get a rough idea of what lists, dictionaries, tuples and sets are before you learn how to use them. Make sure you understand:\n",
     "<ul>\n",
     "    <li>Mutability</li>\n",
@@ -53,39 +67,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br><b>Task 2</b></br>\n",
+    "<br><b>Task 3</b></br>\n",
     "<p>\n",
     "Please go to the <a href='list.ipynb'>list</a> notebook to do the exercises\n",
     "</p>"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br><b>Task 3</b></br>\n",
+    "<br><b>Task 4</b></br>\n",
     "<p>\n",
     "Please go to the <a href='dictionary.ipynb'>dictionary</a> notebook to do the exercises\n",
     "</p>"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<br><b>Task 4</b></br>\n",
-    "<p>\n",
-    "Please go to the <a href='tuple_and_set.ipynb'>tuple and set</a> notebook to do the exercises\n",
-    "</p>"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "<br><b>Task 5</b></br>\n",
     "<p>\n",
-    "Please go to the <a href='homework_data_structure.ipynb'>homework</a> notebook to do the application-based exercises\n",
+    "Please go to the <a href='tuple_and_set.ipynb'>tuple and set</a> notebook to do the exercises\n",
     "</p>"
    ]
   },
@@ -95,6 +101,17 @@
    "metadata": {},
    "source": [
     "<br><b>Task 6</b></br>\n",
+    "<p>\n",
+    "Please go to the <a href='homework_data_structure.ipynb'>homework</a> notebook to do the application-based exercises that will require you to use everything you have learnt about data structures\n",
+    "</p>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br><b>Task 7</b></br>\n",
     "<p>\n",
     "<b>Reflection</b><br>\n",
     "Think about what you have learnt in the data structure exercises and write a short summary to consolidate your understanding of the topic. Post a question on the discussion forum if you feel like it too!\n",
