--- a/exercises/data_structures/list.ipynb
+++ b/exercises/data_structures/list.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "### Lists\n",
-    "<p><a href='data_structure2.ipynb'>Main - Data Structure 2 Notebook</a></p>\n",
+    "<p><a href='main.ipynb'>Main</a></p>\n",
     "<p>\n",
     "Here we are going to teach you three things:\n",
     "<ol>\n",
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br><b>Task 2.1</b></br>\n",
+    "<br><b>Task 3.1</b></br>\n",
     "<p> \n",
     "After running the cell above, you should have: <br> \n",
     "mylist = ['haha', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9] <br>\n",
@@ -125,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br><b>Task 2.2</b></br>\n",
+    "<br><b>Task 3.2</b></br>\n",
     "Read this bit of the Python documentation on <a href = \"https://www.dataquest.io/blog/data-structures-in-python/#:~:text=Python%20has%20four%20main%20data,heterogeneous%20collection%20of%20related%20objects.\">list </a>. Choose three methods of interest and learn how to use them. "
    ]
   },
@@ -136,14 +136,6 @@
    "outputs": [],
    "source": [
     "# Have fun with trying out different methods for the list object :)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<p><a href='data_structure2.ipynb'>Main - Data Structure 2 Notebook</a></p>"
    ]
   }
  ],
