--- a/exercises/data_structures/main.ipynb
+++ b/exercises/data_structures/main.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Data types and structures\n",
     "\n",
-    "<p>Created by Venus Lee </p>\n"
+    "<p>Created by Venus Lee </p>"
    ]
   },
   {
@@ -35,6 +35,12 @@
     "<br>\n",
     "<br>\n",
     "You can treat documentation a bit like how you treat an A-level subject specification, essentially a document containing all you need to know to succeed in learning Python. They come in different languages (English, Chinese, Japanese, Spanish, French and so forth...) so developers all around the globe can understand the information with ease.\n",
+    "</p>\n",
+    "\n",
+    "<p>\n",
+    "<b>Extra</b><br>\n",
+    "\n",
+    "For those of you that are keen, check out this <a href='https://www.youtube.com/watch?v=s1PLS3SQHQ0'>video</a> that gives you a rough idea of how to search for things you need in developer documentation.\n",
     "</p>\n"
    ]
   },
@@ -43,9 +49,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br><b>Task 1</b></br>\n",
+    "<br><b>Task 1: Basics</b></br>\n",
     "<p>\n",
-    "Go through the <a href='data_type.ipynb'>data type</a> notebook if you need a quick recap on the four basic in-built data types (strings, integers, floats and booleans) in Python. \n",
+    "Go through the <a href='data_type.ipynb'>data types</a> notebook if you need a quick recap on the four basic in-built data types (strings, integers, floats and booleans) in Python. \n",
     "</p>"
    ]
   },
@@ -54,7 +60,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br><b>Task 2</b></br>\n",
+    "<br><b>Task 2: Data Structures</b></br>\n",
+    "\n",
     "Read this <a href = \"https://www.dataquest.io/blog/data-structures-in-python/#:~:text=Python%20has%20four%20main%20data,heterogeneous%20collection%20of%20related%20objects.\">short article </a> to get a rough idea of what lists, dictionaries, tuples and sets are before you learn how to use them. Make sure you understand:\n",
     "<ul>\n",
     "    <li>Mutability</li>\n",
@@ -67,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br><b>Task 3</b></br>\n",
+    "<br><b>Task 3: Lists</b></br>\n",
     "<p>\n",
     "Please go to the <a href='list.ipynb'>list</a> notebook to do the exercises\n",
     "</p>"
@@ -78,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br><b>Task 4</b></br>\n",
+    "<br><b>Task 4: Dictionaries</b></br>\n",
     "<p>\n",
     "Please go to the <a href='dictionary.ipynb'>dictionary</a> notebook to do the exercises\n",
     "</p>"
@@ -89,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br><b>Task 5</b></br>\n",
+    "<br><b>Task 5: Tuples and Sets</b></br>\n",
     "<p>\n",
     "Please go to the <a href='tuple_and_set.ipynb'>tuple and set</a> notebook to do the exercises\n",
     "</p>"
@@ -100,9 +107,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br><b>Task 6</b></br>\n",
+    "<br><b>Task 6: HW</b></br>\n",
     "<p>\n",
-    "Please go to the <a href='homework_data_structure.ipynb'>homework</a> notebook to do the application-based exercises that will require you to use everything you have learnt about data structures\n",
+    "Please go to the <a href='homework.ipynb'>homework</a> notebook to do the application-based exercises that will require you to use everything you have learnt about data structures\n",
     "</p>"
    ]
   },
@@ -111,9 +118,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br><b>Task 7</b></br>\n",
+    "<br><b>Task 7: Reflection</b></br>\n",
     "<p>\n",
-    "<b>Reflection</b><br>\n",
     "Think about what you have learnt in the data structure exercises and write a short summary to consolidate your understanding of the topic. Post a question on the discussion forum if you feel like it too!\n",
     "</p>"
    ]
