first draft of the data structure exercises

--- a/exercises/data_structures/data_types.ipynb
+++ b/exercises/data_structures/data_types.ipynb
@@ -5,11 +5,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Storage (Part 1)\n",
+    "# Data Types\n",
     "\n",
-    "<a href='data_structure2.ipynb'>Data Storage (Part 2)</a>\n",
+    "<a href='data_structure2.ipynb'>Main</a>\n",
     "\n",
-    "In python the four basic primitive data types are strings, integers, floats and booleans. There are several built-in data structures that store these four primitive data such as lists, dictionaries, sets and tuples. (see <a href='data_structure2.ipynb'>Data Storage (Part 2)</a>) For our purposes, understanding and utilising these aformentioned concepts will suffice. However, it is good to know that there are other very useful data structures in computer science such as linked lists, hash maps, stacks, trees, queues and so forth. "
+    "In python the four basic primitive data types are strings, integers, floats and booleans. There are several built-in data structures that store these four primitive data such as lists, dictionaries, sets and tuples. (see <a href='main.ipynb'>main</a>) For our purposes, understanding and utilising these aformentioned concepts will suffice. However, it is good to know that there are other very useful data structures in computer science such as linked lists, hash maps, stacks, trees, queues and so forth. "
    ]
   },
   {
