--- a/exercises/data_structures/dictionary.ipynb
+++ b/exercises/data_structures/dictionary.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dictionaries\n",
+    "### 4. Dictionaries\n",
     "<p><a href='main.ipynb'>Main - Data Structure Notebook</a></p>\n",
     "<p>\n",
     "Here we are going to teach you two things:\n",
