--- a/exercises/data_structures/list.ipynb
+++ b/exercises/data_structures/list.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Lists\n",
+    "### 3. Lists\n",
     "<p><a href='main.ipynb'>Main</a></p>\n",
     "<p>\n",
     "Here we are going to teach you three things:\n",
@@ -126,7 +126,9 @@
    "metadata": {},
    "source": [
     "<br><b>Task 3.2</b></br>\n",
-    "Read this bit of the Python documentation on <a href = \"https://www.dataquest.io/blog/data-structures-in-python/#:~:text=Python%20has%20four%20main%20data,heterogeneous%20collection%20of%20related%20objects.\">list </a>. Choose three methods of interest and learn how to use them. "
+    "Read this bit of the Python documentation on <a href = \"https://docs.python.org/3/tutorial/datastructures.html\">list </a>. Choose three methods of interest and learn how to use them. <br>\n",
+    "\n",
+    "For those that are more capable, you might want to learn more about <a href=\"https://docs.python.org/3/tutorial/datastructures.html#list-comprehensions\" >list comprehensions</a>."
    ]
   },
   {
