--- a/exercises/data_structures/main.ipynb
+++ b/exercises/data_structures/main.ipynb
@@ -51,7 +51,7 @@
    "source": [
     "<br><b>Task 1: Basics</b></br>\n",
     "<p>\n",
-    "Go through the <a href='data_type.ipynb'>data types</a> notebook if you need a quick recap on the four basic in-built data types (strings, integers, floats and booleans) in Python. \n",
+    "Go through the <a href='data_types.ipynb'>data types</a> notebook if you need a quick recap on the four basic in-built data types (strings, integers, floats and booleans) in Python. \n",
     "</p>"
    ]
   },
